src/Frontend/src/components/course/Course/Course.less
@import "../../../variables";

@pageWrapperMinPadding: 20px;
@pageWrapperLaptopLeftPadding: 32px;
@pageWrapperLaptopTopPadding: 40px;
@maxPageWrapperWidth: calc(@maxContentWidth - @maxNavigationMenuWidth);

.rootWrapper {
  height: calc(100vh - 50px);
  overflow: auto;
}

.root {
  display: flex;
  max-width: @maxContentWidth;
}

.pageWrapper {
  position: relative;

  width: 100%;
  max-width: 100vw;
  min-height: calc(100vh - @headerHeight);

  padding-left: 20px;
  padding-right: 20px;

  background-color: #ffffff;
}

.withoutNavigation {
  position: relative;

  width: 100%;
  max-width: 100vw;

  padding-left: @pageWrapperMinPadding;
  padding-right: @pageWrapperMinPadding;
}

@media (min-width: @maxPhoneWidth) {
  .pageWrapper {
    padding-top: 28px;
    max-width: calc(100vw - @navigationMenuWidth);
  }
}

@media (min-width: @maxLaptopWidth) {
  .pageWrapper {
    padding-left: @pageWrapperLaptopLeftPadding;
    padding-top: @pageWrapperLaptopTopPadding;
    max-width: calc(100vw - @maxNavigationMenuWidth);
  }
}

@media (min-width: @maxContentWidth) {
  .rootWrapper{
    background-color: @backgroundGray;
  }
  .root {
    margin-left: calc((100vw - @maxContentWidth) / 2);
    box-shadow: 0 0 7px 1px #ccc;
  }
}

